<resources>
    <string name="app_name">My Application</string>
    <string name="title"> Registration Form</string>
    <string name="subtitle"> Welcome to Adventure Learning Club!</string>
    <string name="name"> Full Name </string>
    <string name="gender"> Gender </string>
    <string name="student"> Student ID </string>
    <string name="school"> School </string>
    <string name="email"> E-mail </string>
    <string name="phone"> Phone </string>
    <string name="register"> Register </string>
</resources>