<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:scrollbarSize="40dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="24sp"
        android:layout_marginVertical="5dp"
        android:textStyle="bold"
        android:layout_marginHorizontal="10sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/subtitle"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="10dp" />
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="10dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="10sp"
            android:layout_marginVertical="5dp"
            android:textStyle="bold"
            android:layout_marginHorizontal="10dp" />
        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="First Name"
            android:layout_marginHorizontal="10sp"
            android:textSize="8sp" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_marginHorizontal="10sp"
            android:text="Last Name"
            android:textSize="10sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginVertical="10dp"
            android:text="@string/gender"
            android:layout_marginHorizontal="10sp"
            android:textSize="10sp" />

        <RadioButton
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:text="Male"
            android:textSize="8sp" />

        <RadioButton
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:text="Female"
            android:textSize="8sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp">

        <TextView
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:text="@string/student"
            android:textSize="10sp"
            android:layout_marginHorizontal="10sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="321dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="8sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp">

        <TextView
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:text="@string/school"
            android:textSize="10sp"
            android:layout_marginHorizontal="10sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="321dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="8sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp">

        <TextView
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="10sp"
            android:layout_marginHorizontal="10sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="321dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="8sp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp">

        <TextView
            android:layout_width="57dp"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="10sp"
            android:layout_marginHorizontal="10sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="321dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="8sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="10dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="78sp"
            android:text="@string/register"
            android:textColorHighlight="#955454"
            android:textColorHint="#735454" />


    </LinearLayout>


</LinearLayout>